tests/ui/duplicate/dupe-symbols-1.stderr
error: symbol `fail` is already defined
  --> $DIR/dupe-symbols-1.rs:12:1
   |
LL | pub fn b() {
   | ^^^^^^^^^^

error: aborting due to 1 previous error

